# ladybug_codes

./: .gitignore  FRA_AR_Clermont-Ferrand.Auvergne.AP.074600_TMYx.epw  HVAC.md  README.md  availability_schedule.py  common.py  eplus_output_reader.py  generate_geometry.py  generate_hvac.py  pyproject.toml  soil.py
csv/: README.md
csv/adm_baseboard_rad_conv_water/: baseboard_eau_chaude.osm  eplusout.csv  eplustbl.htm
csv/adm_no_heat/: adm_no_heat.osm  eplusout.csv
csv/adm_prhp_heating_n_cooling/: eplusout.csv  eplustbl.htm
csv/adm_prhp_only_heating/: adm_prhp.osm  eplusout.csv  eplustbl.htm
csv/adm_radiant_per_zone/: adm_radiant_per_zone.osm  eplusout.csv  eplustbl.htm
idf/openstudio_exports/: adm_prhp.idf  boiler_and_baseboards.idf
src/: autocomplete.py  generate_helpers.py  hvac.py  vis_tools.py
src/helpers/: consts.py  geometry.py
src/idf_autocomplete/: idf_helpers.py  idf_types.py
src/idfhub/: __init__.py  feed_idf_autocomplete.py  hvac.py  hvac_old.py
src/idfhub/helpers/: common.py  consts.py  geometry.py  material.py
src/idfhub/idf_autocomplete/: idf_helpers.py  idf_helpers_short.py  idf_types.py  idf_types_short.py
