[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "honeybee.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "honeybee_energy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ladybug_geometry.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idfhub"
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["idfhub"]